fix label item and overflow issue

--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,6 +1,5 @@
 .containter{
     width: 100%;
-    height: 100vh;
     border: 1px solid #000;
     display: flex;
 }
